--- a/index.html
+++ b/index.html
@@ -6,12 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football Game</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/aebcebbe2c.js" crossorigin="anonymous"></script>
     <!-- css add -->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <!-- header start -->
+    <header class="head-section">
+        <div class="top-section">
+            <div>
+                <div class="top-detail">Conmebol
+                    Copa America
+                    2021
+                </div>
+                <div class="top-icon">
+                    <span class="icon-detail">Watch Live</span> <i class="fas fa-arrow-right ar-icon"></i>
+                </div>
+            </div>
+            <div class="top-img">
+                <img src="images/banner.png" alt="">
+            </div>
+        </div>
+    </header>
+    <!-- header end -->
 </body>
 
 </html>
