--- a/index.html
+++ b/index.html
@@ -132,6 +132,16 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div><img src="images/Logo.png" alt=""></div>
+        <div>
+            <i class="fab fa-twitter social-img"></i>
+            <i class="fab fa-facebook-square social-img"></i>
+            <i class="fab fa-instagram-square social-img"></i>
+            <i class="fab fa-youtube social-img"></i>
+        </div>
+        <p>Copyright © 2022 Football</p>
+    </footer>
 </body>
 
 </html>
